--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -9,11 +9,11 @@
     <ul class="flex flex-col items-center  bg-white w-full z-[-1] md:z-auto lg:opacity-100"
       [ngClass]="{'opacity-100': isMenuOpen, 'opacity-0': !isMenuOpen}">
       <div class="flex flex-col lg:flex-row items-center gap-10">
-        <li class="mx-4 my-6 md:my-0 transition-500"><a routerLink="" routerLinkActive="text-principal">Home</a></li>
+        <li class="mx-4 my-6 md:my-0 transition-500"><a routerLink="home" routerLinkActive="text-principal">Home</a></li>
         <li class="mx-4 my-6 md:my-0"><a routerLink="aboutus" routerLinkActive="text-principal">About us</a></li>
-        <li class="mx-4 my-6 md:my-0">Game</li>
-        <li class="mx-4 my-6 md:my-0">Contact</li>
-        <li class="mx-4 my-6 md:my-0">Pets</li>
+        <li class="mx-4 my-6 md:my-0"><a routerLink="game" routerLinkActive="text-principal">Game</a></li>
+        <li class="mx-4 my-6 md:my-0"><a routerLink="contact" routerLinkActive="text-principal">Contact</a></li>
+        <li class="mx-4 my-6 md:my-0"><a routerLink="pets" routerLinkActive="text-principal">Pets</a></li>
         <li>
           <button class="uppercase bg-principal px-2 rounded-principal w-180 h-40 text-white">Adopt Now</button>
         </li>
